fix: show linebreaks in the answer

--- a/user-interface/src/app/scss/app.scss
+++ b/user-interface/src/app/scss/app.scss
@@ -774,6 +774,7 @@ th {
 blockquote {
   font-weight: bold;
   font-size: 14px;
+  white-space: pre-wrap;
 }
 
 blockquote::before {
